fixed word overflow issue

--- a/web-app/src/components/post/post.css
+++ b/web-app/src/components/post/post.css
@@ -51,6 +51,8 @@
 .postTitle{
     font-size: 24px;
     font-weight: bold;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 .postImg{
@@ -60,8 +62,15 @@
     object-fit: contain;
 }
 
+.postText{
+    overflow-wrap: break-word;
+    word-break: break-all;
+}
+
 .ingredients{
     font-size: 18px;
+    overflow-wrap: break-word;
+    word-break: break-all;
 }
 
 .postBottom{
